v0.0.5: Milestone 5 应用安全加固与 AI 使用控制
- CSRF：启用 Spring Security CSRF（XSRF-TOKEN cookie + X-XSRF-TOKEN 头别名 + GET /api/csrf），前端 csrf.js 统一封装 fetch
- Session：HttpOnly / SameSite=Lax / 可配 Secure，登录成功后重建 Session，CORS 来源显式配置
- 聊天限流：每用户 5 次/分钟 + 100 次/Asia/Shanghai 自然日，chat_usage_daily 原子计数，超限 429
- 输出限制：ChatRequest.maxTokens 服务端强制截断到 1024
- 管理员：POST /api/users/admin/chat-quota/reset/{userId} 重置当日额度并写审计日志
- 基础防护：注册 IP 限速、登录失败临时锁定、SSE 超时可配、输入长度限制、管理员 API 可选内网限制
- 文档同步 v0.0.5：SCHEMA/API/AGENTS/PROJECT_PLAN/release_notes/apiList/.env.example
- 188 个自动化测试全部通过（含 CSRF 403、分钟/日额度、跨午夜、管理员重置、并发计数、max_tokens 截断、登录/注册限速）